Fix PRIMITIVE_RESTART_FIXED_INDEX handling in command buffer and WebGL 2.0.

Adapted from yunchao.he@intel.com's
https://codereview.chromium.org/1783763002 .

This fixes the command buffer's index validation and WebGL 2.0's
implicit enabling of this capability. Emulation of this feature on top
of earlier desktop OpenGL versions will be implemented in a later CL.

BUG=594021, 295792
TEST=deqp/functional/gles3/primitiverestart.html
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1813163003

Cr-Commit-Position: refs/heads/master@{#382497}