gpu/command_buffer/service/buffer_manager.h
@@ -64,7 +64,7 @@ class GPU_EXPORT Buffer : public base::RefCounted<Buffer> {
   // offset is in bytes.
   // count is in elements of type.
   bool GetMaxValueForRange(GLuint offset, GLsizei count, GLenum type,
-                           GLuint* max_value);
+                           bool primitive_restart_enabled, GLuint* max_value);
 
   // Returns a pointer to shadowed data.
   const void* GetRange(GLintptr offset, GLsizeiptr size) const;
@@ -102,10 +102,12 @@ class GPU_EXPORT Buffer : public base::RefCounted<Buffer> {
   // Represents a range in a buffer.
   class Range {
    public:
-    Range(GLuint offset, GLsizei count, GLenum type)
+    Range(GLuint offset, GLsizei count, GLenum type,
+          bool primitive_restart_enabled)
         : offset_(offset),
           count_(count),
-          type_(type) {
+          type_(type),
+          primitive_restart_enabled_(primitive_restart_enabled) {
     }
 
     // A less functor provided for std::map so it can find ranges.
@@ -117,7 +119,10 @@ class GPU_EXPORT Buffer : public base::RefCounted<Buffer> {
         if (lhs.count_ != rhs.count_) {
           return lhs.count_ < rhs.count_;
         }
-        return lhs.type_ < rhs.type_;
+        if (lhs.type_ != rhs.type_) {
+          return lhs.type_ < rhs.type_;
+        }
+        return lhs.primitive_restart_enabled_ < rhs.primitive_restart_enabled_;
       }
     };
 
@@ -125,6 +130,7 @@ class GPU_EXPORT Buffer : public base::RefCounted<Buffer> {
     GLuint offset_;
     GLsizei count_;
     GLenum type_;
+    bool primitive_restart_enabled_;
   };
 
   ~Buffer();
